--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@
 
 .App-logo {
   height: 40vmin;
-  pointer-events: visible;
+  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
